--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -11473,7 +11473,8 @@ div.mc-main.mini .event-title {
   display: none; }
 
 div.mc-main.mini .mc-date.trigger {
-  height: 100%; }
+  height: 100%;
+  display: block; }
 
 div.mc-main.mini .mini-event {
   border: none; }
