--- a/sass/theme/_classes_page.scss
+++ b/sass/theme/_classes_page.scss
@@ -21,7 +21,9 @@ section.classes {
 		&:hover {
 			opacity: 0.6;
 		}
-		cursor: pointer;
+		a {
+			cursor: pointer;
+		}
 		text-align: center;
 		display: inline-block;
 		color: $primary;
