--- a/sass/theme/_gallery_page.scss
+++ b/sass/theme/_gallery_page.scss
@@ -169,7 +169,8 @@ section#past-gallery {
 .single-gallery-page {
   .gallery-contents {
     padding: 0 30px 30px 0px;
-    h1 {
+
+    h1, h2, h3 {
       text-align: justify !important;
     }
   }
