fixed bug with search taking up two lines on certain screen sizes

--- a/sass/theme/_search.scss
+++ b/sass/theme/_search.scss
@@ -6,6 +6,7 @@ form#searchform {
   }
 
   div.input-group {
+    flex-wrap: nowrap; 
     input.form-control {
       border: 1px solid $primary;
       border-right: none;
