removed weird gray overlay for single blog page, adding some spacing for single blog header text on mobile

--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -11341,6 +11341,9 @@ div#blog-pagination a {
   background-position: left top;
   background-repeat: no-repeat;
   background-size: auto; }
+  @media (max-width: 767.98px) {
+    .single-blog-featured-text div.col-sm-8 {
+      width: 80%; } }
 
 .blog-contents {
   font-family: GothicA1;
