--- a/sass/theme/_gallery_page.scss
+++ b/sass/theme/_gallery_page.scss
@@ -198,6 +198,7 @@ section#past-gallery {
 
       div.vera-bordered-social-icons i {
         margin-right: .6em;
+        margin-bottom: .6em;
       }
     }
 
