--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -11207,7 +11207,8 @@ section#past-gallery {
 .single-gallery-page .card .card-footer {
   padding: 30px; }
   .single-gallery-page .card .card-footer div.vera-bordered-social-icons i {
-    margin-right: .6em; }
+    margin-right: .6em;
+    margin-bottom: .6em; }
 
 .single-gallery-page .card .card-text {
   font-size: 13px; }
@@ -11922,7 +11923,7 @@ right padding is 50px
 bottom padding is 75px
 left padding is 100px
 */
-div.vera-bordered-social-icons i[class^="fa fa-facebook-f"], div.vera-bordered-social-icons i[class^="fa fa-twitter"], div.vera-bordered-social-icons i[class^="fa fa-instagram"], div.vera-bordered-social-icons i[class^="fa fa-youtube-play"] {
+div.vera-bordered-social-icons i[class^="fa fa-"] {
   border: solid 1px #D41C53;
   margin-right: 0.4em; }
 
@@ -11934,16 +11935,31 @@ div.vera-bordered-social-icons a {
   color: white; }
 
 div.vera-bordered-social-icons i[class^="fa fa-facebook-f"] {
-  padding: .6em .8em; }
-
-div.vera-bordered-social-icons i[class^="fa fa-twitter"] {
-  padding: .6em .64em; }
+  padding: 0.6em 0.81em; }
 
 div.vera-bordered-social-icons i[class^="fa fa-instagram"] {
-  padding: .6em .64em; }
+  padding: 0.6em 0.69em; }
+
+div.vera-bordered-social-icons i[class^="fa fa-twitter"] {
+  padding: 0.6em 0.64em; }
+
+div.vera-bordered-social-icons i[class^="fa fa-globe"] {
+  padding: 0.6em 0.67em; }
+
+div.vera-bordered-social-icons i[class^="fa fa-spotify"] {
+  padding: 0.6em 0.67em; }
+
+div.vera-bordered-social-icons i[class^="fa fa-soundcloud"] {
+  padding: 0.6em 0.46em; }
+
+div.vera-bordered-social-icons i[class^="fa fa-bandcamp"] {
+  padding: 0.6em; }
 
 div.vera-bordered-social-icons i[class^="fa fa-youtube-play"] {
-  padding: .6em .55em; }
+  padding: 0.6em; }
+
+div.vera-bordered-social-icons i[class^="fa fa-snapchat"] {
+  padding: 0.6em 0.67em; }
 
 .entry-header .entry-title {
   color: white;
