--- a/sass/theme/_gallery_page.scss
+++ b/sass/theme/_gallery_page.scss
@@ -171,6 +171,11 @@ section#past-gallery {
 }
 
 .single-gallery-page {
+
+  h4.single-blog-title {
+    font-size: 25px;
+  }
+
   .gallery-contents {
     padding: 0 30px 30px 0px;
 
