--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -12378,6 +12378,9 @@ div#wrapper-footer div.donate-footer {
     font-size: 72px;
     color: white;
     letter-spacing: 1.5px; }
+    @media (max-width: 767.98px) {
+      div#wrapper-footer div.donate-footer h1 {
+        font-size: 35px; } }
     div#wrapper-footer div.donate-footer h1 strong {
       color: #D41C53;
       font-family: BebasNeue;
@@ -12440,7 +12443,8 @@ div#wrapper-footer .site-footer {
     color: #D41C53; }
     @media (max-width: 767.98px) {
       div#wrapper-footer .site-footer .footer-title {
-        margin-top: 3rem; } }
+        margin-top: 3rem;
+        font-size: 60px; } }
   div#wrapper-footer .site-footer .footer-content {
     font-family: GothicA1;
     font-size: 18px;
