--- a/sass/theme/_child_theme.scss
+++ b/sass/theme/_child_theme.scss
@@ -801,6 +801,10 @@ div#wrapper-footer {
 			color: white;
 			letter-spacing: 1.5px;
 
+			@include media-breakpoint-down(sm) {
+				font-size: 35px;
+			}
+
 			strong {
 				color: $primary;
 				font-family: BebasNeue;
@@ -874,12 +878,14 @@ div#wrapper-footer {
 			margin-top: 2rem;
 			padding-bottom: 1rem;
 			font-family: BebasNeue;
-			font-size: 72px;  line-height: 1;
+			font-size: 72px;
+			line-height: 1;
 			letter-spacing: 1.5px;
 			color: $primary;
 
 			@include media-breakpoint-down(sm) {
 				margin-top: 3rem;
+				font-size: 60px;
 			}
 		}
 
